--- a/admin.html
+++ b/admin.html
@@ -1,88 +1,212 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Admin – Recargas</title>
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Admin - Recargas</title>
   <style>
-    body{font-family:Arial;background:#0b0b0b;color:#fff;padding:20px}
-    table{width:100%;border-collapse:collapse;margin-top:20px}
-    th,td{border:1px solid #333;padding:8px;text-align:center}
-    th{background:#111}
-    button{padding:6px 10px;cursor:pointer}
-    .ok{background:#16a34a;color:#fff;border:0}
-    .no{background:#dc2626;color:#fff;border:0}
+    body{font-family:system-ui,Arial; background:#0b0f14; color:#e6edf3; margin:0}
+    .wrap{max-width:980px; margin:0 auto; padding:20px}
+    .card{background:#111826; border:1px solid #1f2a3a; border-radius:12px; padding:14px; margin:10px 0}
+    .row{display:flex; gap:10px; flex-wrap:wrap; align-items:center; justify-content:space-between}
+    input{background:#0b1220; border:1px solid #263248; color:#e6edf3; padding:10px; border-radius:10px; width:100%}
+    button{padding:10px 12px; border:0; border-radius:10px; cursor:pointer; font-weight:600}
+    .btn{background:#1b2638; color:#e6edf3}
+    .ok{background:#16a34a; color:#04140a}
+    .bad{background:#ef4444; color:#1b0a0a}
+    .muted{color:#9fb0c3; font-size:13px}
+    .pill{padding:4px 10px; border-radius:999px; border:1px solid #2a3a52; font-size:12px}
+    .p-pend{background:#1f2937}
+    .p-ok{background:#064e3b; border-color:#10b981}
+    .p-bad{background:#4c0519; border-color:#fb7185}
+    a{color:#7dd3fc}
   </style>
 </head>
 <body>
+  <div class="wrap">
+    <h2>Panel Admin — Recargas</h2>
+    <div class="muted" id="status">Cargando…</div>
 
-<h2>Panel Admin – Recargas</h2>
+    <!-- LOGIN -->
+    <div class="card" id="loginCard">
+      <h3>Iniciar sesión</h3>
+      <div class="row">
+        <div style="flex:1; min-width:240px">
+          <input id="email" placeholder="Email admin" />
+        </div>
+        <div style="flex:1; min-width:240px">
+          <input id="pass" type="password" placeholder="Contraseña" />
+        </div>
+        <button class="btn" id="btnLogin">Entrar</button>
+      </div>
+      <div class="muted" style="margin-top:10px">
+        *Tu admin debe existir en Supabase Auth. (Email+password)
+      </div>
+    </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Usuario</th>
-      <th>Monto</th>
-      <th>Estado</th>
-      <th>Acción</th>
-    </tr>
-  </thead>
-  <tbody id="rows"></tbody>
-</table>
+    <!-- APP -->
+    <div class="card" id="appCard" style="display:none">
+      <div class="row">
+        <div>
+          <b>Sesión:</b> <span id="who"></span>
+          <span class="pill p-pend" id="countPill">Pendientes: 0</span>
+        </div>
+        <div class="row" style="gap:8px">
+          <button class="btn" id="btnRefresh">Refrescar</button>
+          <button class="btn" id="btnLogout">Salir</button>
+        </div>
+      </div>
+    </div>
 
-<script>
-/* ====== CONFIGURA ESTO ====== */
-const SUPABASE_URL = "TU_SUPABASE_URL";
-const SUPABASE_SERVICE_KEY = "TU_SERVICE_ROLE_KEY"; // SOLO ADMIN
-/* ============================ */
+    <div id="list"></div>
+  </div>
 
-const sb = supabase.createClient(SUPABASE_URL, SUPABASE_SERVICE_KEY);
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
-async function cargar() {
-  const { data } = await sb
-    .from("recargas")
-    .select("*")
-    .order("created_at", { ascending: false });
+    // ====== CAMBIA ESTO ======
+    const SUPABASE_URL = "TU_SUPABASE_URL";
+    const SUPABASE_ANON_KEY = "TU_SUPABASE_ANON_KEY";
+    // =========================
 
-  const tbody = document.getElementById("rows");
-  tbody.innerHTML = "";
+    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  data.forEach(r => {
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${r.id}</td>
-      <td>${r.usuario}</td>
-      <td>${r.monto}</td>
-      <td>${r.estado}</td>
-      <td>
-        ${r.estado === "pendiente"
-          ? `<button class="ok" onclick="aprobar(${r.id},'${r.usuario}',${r.monto})">Aprobar</button>`
-          : "—"}
-      </td>
-    `;
-    tbody.appendChild(tr);
-  });
-}
+    const $ = (id)=>document.getElementById(id);
+    const statusEl = $("status");
+    const loginCard = $("loginCard");
+    const appCard = $("appCard");
+    const listEl = $("list");
+    const whoEl = $("who");
+    const countPill = $("countPill");
 
-async function aprobar(id, usuario, monto) {
-  // sumar saldo
-  await sb.rpc("sumar_saldo_admin", {
-    p_user: usuario,
-    p_monto: monto
-  });
+    function setStatus(t){ statusEl.textContent = t; }
+    function esc(s){ return String(s ?? "").replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
 
-  // marcar recarga entregada
-  await sb
-    .from("recargas")
-    .update({ estado: "entregado" })
-    .eq("id", id);
+    function pillForEstado(estado){
+      if(estado==="aprobado") return `<span class="pill p-ok">aprobado</span>`;
+      if(estado==="rechazado") return `<span class="pill p-bad">rechazado</span>`;
+      return `<span class="pill p-pend">pendiente</span>`;
+    }
 
-  cargar();
-}
+    async function renderPendientes(){
+      setStatus("Cargando recargas…");
+      listEl.innerHTML = "";
 
-cargar();
-</script>
+      // Solo admins deben poder ver (RLS). Si no eres admin, aquí te va a dar error.
+      const { data, error } = await supabase
+        .from("recargas")
+        .select("id, created_at, usuario, monto, estado, mensaje")
+        .order("created_at", { ascending: false })
+        .limit(100);
 
+      if(error){
+        setStatus("Error: " + error.message);
+        return;
+      }
+
+      const pendientes = (data||[]).filter(r => (r.estado ?? "pendiente") === "pendiente");
+      countPill.textContent = `Pendientes: ${pendientes.length}`;
+      setStatus("Listo.");
+
+      if(!data || data.length===0){
+        listEl.innerHTML = `<div class="card">No hay recargas.</div>`;
+        return;
+      }
+
+      listEl.innerHTML = data.map(r=>{
+        const id = r.id;
+        const usuario = esc(r.usuario);
+        const monto = r.monto ?? 0;
+        const estado = r.estado ?? "pendiente";
+        const msg = esc(r.mensaje || "");
+        const fecha = new Date(r.created_at).toLocaleString();
+
+        const disabled = estado !== "pendiente" ? "disabled" : "";
+        const btns = estado==="pendiente" ? `
+          <button class="ok" data-aprobar="${id}">Aprobar</button>
+          <button class="bad" data-rechazar="${id}">Rechazar</button>
+        ` : ``;
+
+        return `
+          <div class="card">
+            <div class="row">
+              <div>
+                <div><b>Usuario:</b> ${usuario}</div>
+                <div><b>Monto:</b> ${monto}</div>
+                <div class="muted">${fecha}</div>
+                ${msg ? `<div class="muted"><b>Mensaje:</b> ${msg}</div>` : ""}
+              </div>
+              <div class="row" style="gap:8px">
+                ${pillForEstado(estado)}
+                ${btns}
+              </div>
+            </div>
+          </div>
+        `;
+      }).join("");
+    }
+
+    async function aprobar(id){
+      setStatus("Aprobando…");
+      // RPC (recomendado) para sumar saldo + actualizar estado
+      const { error } = await supabase.rpc("aprobar_recarga", { p_recarga_id: id });
+      if(error){ setStatus("Error: " + error.message); return; }
+      await renderPendientes();
+    }
+
+    async function rechazar(id){
+      setStatus("Rechazando…");
+      const { error } = await supabase.rpc("rechazar_recarga", { p_recarga_id: id });
+      if(error){ setStatus("Error: " + error.message); return; }
+      await renderPendientes();
+    }
+
+    listEl.addEventListener("click", async (e)=>{
+      const a = e.target?.getAttribute?.("data-aprobar");
+      const r = e.target?.getAttribute?.("data-rechazar");
+      if(a) await aprobar(a);
+      if(r) await rechazar(r);
+    });
+
+    $("btnLogin").onclick = async ()=>{
+      const email = $("email").value.trim();
+      const pass = $("pass").value;
+      setStatus("Entrando…");
+      const { error } = await supabase.auth.signInWithPassword({ email, password: pass });
+      if(error){ setStatus("Error: " + error.message); return; }
+    };
+
+    $("btnLogout").onclick = async ()=>{
+      await supabase.auth.signOut();
+    };
+
+    $("btnRefresh").onclick = renderPendientes;
+
+    // Realtime: si entra una recarga, refresca
+    supabase.channel("recargas-admin")
+      .on("postgres_changes", { event:"*", schema:"public", table:"recargas" }, async ()=> {
+        await renderPendientes();
+      })
+      .subscribe();
+
+    async function onAuth(){
+      const { data: { session } } = await supabase.auth.getSession();
+      if(session){
+        loginCard.style.display = "none";
+        appCard.style.display = "block";
+        whoEl.textContent = session.user.email;
+        await renderPendientes();
+      }else{
+        loginCard.style.display = "block";
+        appCard.style.display = "none";
+        listEl.innerHTML = "";
+        countPill.textContent = "Pendientes: 0";
+        setStatus("Inicia sesión.");
+      }
+    }
+
+    supabase.auth.onAuthStateChange(onAuth);
+    onAuth();
+  </script>
 </body>
 </html>
