--- a/login.html
+++ b/login.html
@@ -1,9 +1,10 @@
-<!doctype html> 
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>YDRX | Login</title>
+
   <style>
     :root{
       --bg:#050608;
@@ -11,7 +12,9 @@
       --neon2:#7CFFB1;
       --text:#e8fff1;
       --muted:#a8d6b8;
-      --shadow: 0 0 12px rgba(41,255,106,.55), 0 0 28px rgba(41,255,106,.35), 0 0 60px rgba(41,255,106,.18);
+      --shadow: 0 0 12px rgba(41,255,106,.55),
+                0 0 28px rgba(41,255,106,.35),
+                0 0 60px rgba(41,255,106,.18);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -22,266 +25,121 @@
       color: var(--text);
       overflow:hidden;
     }
-    canvas#space{position:fixed; inset:0; width:100%; height:100%; display:block; z-index:0;}
+    canvas#space{position:fixed; inset:0; width:100%; height:100%; z-index:0;}
     .wrap{position:relative; z-index:1; min-height:100%; display:flex; align-items:center; justify-content:center; padding:28px 16px;}
     .brand{
       position:absolute; top:22px; left:50%; transform:translateX(-50%);
       letter-spacing:.25em; font-weight:900; font-size:clamp(24px,4vw,44px);
-      text-transform:uppercase; color:var(--text);
-      text-shadow: 0 0 10px rgba(41,255,106,.6), 0 0 30px rgba(41,255,106,.35);
-      filter: drop-shadow(0 0 16px rgba(41,255,106,.25));
-      user-select:none;
+      text-transform:uppercase;
+      text-shadow:0 0 10px rgba(41,255,106,.6),0 0 30px rgba(41,255,106,.35);
     }
     .brand::after{
       content:""; display:block; margin:10px auto 0; width:120px; height:2px;
-      background: linear-gradient(90deg, transparent, rgba(41,255,106,.9), transparent);
-      box-shadow: var(--shadow); opacity:.9;
+      background:linear-gradient(90deg,transparent,rgba(41,255,106,.9),transparent);
+      box-shadow:var(--shadow);
     }
     .card{
       width:min(460px,92vw);
       padding:26px 22px;
       border-radius:18px;
-      background: rgba(0,0,0,.55);
-      backdrop-filter: blur(10px);
+      background:rgba(0,0,0,.55);
+      backdrop-filter:blur(10px);
       border:1.5px solid rgba(41,255,106,.55);
-      box-shadow: var(--shadow);
-      position:relative;
-      overflow:hidden;
+      box-shadow:var(--shadow);
     }
-    .card::before{
-      content:"";
-      position:absolute; inset:-2px; border-radius:18px;
-      background:
-        radial-gradient(1000px 300px at 20% 0%, rgba(41,255,106,.18), transparent 55%),
-        radial-gradient(800px 280px at 90% 110%, rgba(124,255,177,.14), transparent 55%);
-      pointer-events:none;
-    }
-    .headline{position:relative; margin:0 0 6px; font-size:22px; font-weight:800;}
-    .sub{position:relative; margin:0 0 18px; color:var(--muted); line-height:1.4; font-size:14px;}
-
-    .form{position:relative; display:grid; gap:12px; margin-top:8px;}
-    label{font-size:12px; color:rgba(232,255,241,.82);}
-    .field{display:grid; gap:6px;}
+    .headline{margin:0 0 6px;font-size:22px;font-weight:800;}
+    .sub{margin:0 0 18px;color:var(--muted);font-size:14px;}
+    .form{display:grid;gap:12px;}
+    label{font-size:12px;}
+    .field{display:grid;gap:6px;}
     input{
-      width:100%;
-      padding:12px 12px;
-      border-radius:14px;
+      padding:12px;border-radius:14px;
       border:1.5px solid rgba(41,255,106,.35);
-      background: rgba(0,0,0,.45);
-      color: var(--text);
-      outline:none;
-      transition: box-shadow .15s ease, border-color .15s ease;
+      background:rgba(0,0,0,.45);
+      color:var(--text);
     }
-    input:focus{
-      border-color: rgba(41,255,106,.85);
-      box-shadow: 0 0 0 3px rgba(41,255,106,.14), 0 0 18px rgba(41,255,106,.20);
-    }
-    .row{
-      display:flex; align-items:center; justify-content:space-between;
-      gap:10px;
-      margin-top:2px;
-    }
-    .link{
-      color: rgba(124,255,177,.95);
-      text-decoration:none;
-      border-bottom: 1px dashed rgba(124,255,177,.65);
-      font-size:12px;
-      opacity:.95;
-    }
-    .link:hover{opacity:1}
-
+    .row{display:flex;justify-content:space-between;font-size:12px;}
     .btn{
-      display:flex; align-items:center; justify-content:center;
-      width:100%;
-      padding:13px 14px;
-      border-radius:14px;
+      padding:13px;border-radius:14px;
+      border:1.5px solid rgba(41,255,106,.85);
+      background:rgba(41,255,106,.18);
+      color:var(--text);
       font-weight:900;
       cursor:pointer;
-      border:1.5px solid rgba(41,255,106,.85);
-      background: rgba(41,255,106,.18);
-      color: var(--text);
-      box-shadow: 0 0 14px rgba(41,255,106,.25);
-      transition: transform .15s ease, box-shadow .15s ease, background .15s ease;
-      user-select:none;
-      margin-top:6px;
     }
-    .btn:hover{transform:translateY(-1px); box-shadow: 0 0 14px rgba(41,255,106,.35), 0 0 34px rgba(41,255,106,.18); background: rgba(41,255,106,.22);}
-    .btn:active{transform:translateY(0px) scale(.99);}
-
-    .tiny{
-      position:relative;
-      margin-top:12px;
-      font-size:12px;
-      color: rgba(232,255,241,.74);
-      text-align:center;
-    }
-    .tiny a{color: rgba(124,255,177,.95); text-decoration:none; border-bottom:1px dashed rgba(124,255,177,.65);}
-    .tiny a:hover{opacity:1}
+    .tiny{margin-top:12px;font-size:12px;text-align:center;}
   </style>
 </head>
 
 <body>
-  <canvas id="space"></canvas>
+<canvas id="space"></canvas>
 
-  <div class="wrap">
-    <div class="brand">YDRX</div>
+<div class="wrap">
+  <div class="brand">YDRX</div>
 
-    <section class="card" aria-label="Login">
-      <h1 class="headline">Iniciar sesión</h1>
-      <p class="sub">Entra a tu cuenta para comprar con saldo y ver tus pedidos.</p>
+  <section class="card">
+    <h1 class="headline">Iniciar sesión</h1>
+    <p class="sub">Entra a tu cuenta para comprar con saldo y ver tus pedidos.</p>
 
-      <form class="form" id="loginForm">
-        <div class="field">
-          <label for="email">Correo</label>
-          <input id="email" type="email" autocomplete="email" placeholder="tu@email.com" required />
-        </div>
+    <form class="form" id="loginForm">
+      <div class="field">
+        <label>Correo</label>
+        <input id="email" type="email" required>
+      </div>
+      <div class="field">
+        <label>Contraseña</label>
+        <input id="password" type="password" required>
+      </div>
+      <div class="row">
+        <a href="index.html">← Volver</a>
+        <a href="#" id="forgot">¿Olvidaste?</a>
+      </div>
+      <button class="btn">Entrar</button>
+      <div class="tiny">¿No tienes cuenta? <a href="register.html">Regístrate</a></div>
+    </form>
+  </section>
+</div>
 
-        <div class="field">
-          <label for="password">Contraseña</label>
-          <input id="password" type="password" autocomplete="current-password" placeholder="••••••••" required />
-        </div>
+<!-- SUPABASE -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase.js"></script>
 
-        <div class="row">
-          <a class="link" href="index.html">← Volver</a>
-          <a class="link" href="#" id="forgot">¿Olvidaste tu contraseña?</a>
-        </div>
+<script>
+/* FONDO */
+const canvas=document.getElementById("space");
+const ctx=canvas.getContext("2d");
+function resize(){canvas.width=innerWidth;canvas.height=innerHeight}
+let stars=[];
+function buildStars(){
+  stars=Array.from({length:300},()=>({
+    x:Math.random()*canvas.width,
+    y:Math.random()*canvas.height,
+    r:Math.random()*1.4,
+    a:Math.random()
+  }));
+}
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  for(const s of stars){
+    ctx.beginPath();
+    ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
+    ctx.fillStyle=`rgba(232,255,241,${s.a})`;
+    ctx.fill();
+  }
+  requestAnimationFrame(draw);
+}
+resize();buildStars();draw();
+addEventListener("resize",()=>{resize();buildStars()});
 
-        <button class="btn" type="submit">Entrar</button>
-
-        <div class="tiny">
-          ¿No tienes cuenta? <a href="register.html">Regístrate</a>
-        </div>
-      </form>
-    </section>
-  </div>
-
-  <!-- ✅ Supabase primero -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="supabase.js"></script>
-
-  <script>
-    // Fondo: estrellas + meteoros
-    const canvas = document.getElementById("space");
-    const ctx = canvas.getContext("2d", { alpha: true });
-
-    let W, H, DPR;
-    function resize(){
-      DPR = Math.max(1, Math.min(2, window.devicePixelRatio || 1));
-      W = canvas.width = Math.floor(innerWidth * DPR);
-      H = canvas.height = Math.floor(innerHeight * DPR);
-      canvas.style.width = innerWidth + "px";
-      canvas.style.height = innerHeight + "px";
-      ctx.setTransform(DPR,0,0,DPR,0,0);
-      buildStars();
-    }
-    window.addEventListener("resize", resize);
-
-    let stars = [];
-    function buildStars(){
-      const count = Math.floor((innerWidth * innerHeight) / 9000);
-      stars = Array.from({length: Math.max(120, Math.min(520, count))}, () => ({
-        x: Math.random() * innerWidth,
-        y: Math.random() * innerHeight,
-        r: Math.random() * 1.4 + 0.2,
-        a: Math.random() * 0.6 + 0.2,
-        tw: Math.random() * 0.02 + 0.005
-      }));
-    }
-
-    const meteors = [];
-    function spawnMeteor(){
-      const fromRight = Math.random() < 0.6;
-      const x = fromRight ? innerWidth + 60 : Math.random() * innerWidth;
-      const y = fromRight ? Math.random() * (innerHeight * 0.6) : -60;
-      const vx = fromRight ? -(Math.random()*6 + 10) : (Math.random()*6 + 10);
-      const vy = (Math.random()*4 + 6);
-
-      meteors.push({ x, y, vx, vy, life:0, maxLife: Math.random()*40 + 40, len: Math.random()*180 + 120 });
-    }
-
-    let meteorTimer = 0;
-    function tick(dt){
-      meteorTimer += dt;
-      if (meteorTimer > (Math.random()*1800 + 1200)) {
-        spawnMeteor();
-        meteorTimer = 0;
-      }
-    }
-
-    let last = performance.now();
-    function draw(now){
-      const dt = now - last;
-      last = now;
-
-      ctx.clearRect(0,0,innerWidth,innerHeight);
-
-      const g = ctx.createRadialGradient(innerWidth*0.25, innerHeight*0.2, 0, innerWidth*0.25, innerHeight*0.2, Math.max(innerWidth,innerHeight));
-      g.addColorStop(0, "rgba(41,255,106,0.08)");
-      g.addColorStop(0.55, "rgba(0,0,0,0)");
-      g.addColorStop(1, "rgba(0,0,0,0)");
-      ctx.fillStyle = g;
-      ctx.fillRect(0,0,innerWidth,innerHeight);
-
-      for (const s of stars){
-        s.a += (Math.random() - 0.5) * s.tw;
-        s.a = Math.max(0.08, Math.min(0.95, s.a));
-        ctx.beginPath();
-        ctx.arc(s.x, s.y, s.r, 0, Math.PI*2);
-        ctx.fillStyle = `rgba(232,255,241,${s.a})`;
-        ctx.fill();
-      }
-
-      tick(dt);
-
-      for (let i = meteors.length - 1; i >= 0; i--){
-        const m = meteors[i];
-        m.x += m.vx * (dt/16.67);
-        m.y += m.vy * (dt/16.67);
-        m.life += (dt/16.67);
-
-        const tx = m.x - (m.vx/Math.hypot(m.vx,m.vy)) * m.len;
-        const ty = m.y - (m.vy/Math.hypot(m.vx,m.vy)) * m.len;
-
-        const grad = ctx.createLinearGradient(m.x, m.y, tx, ty);
-        grad.addColorStop(0, "rgba(41,255,106,0.85)");
-        grad.addColorStop(0.35, "rgba(124,255,177,0.35)");
-        grad.addColorStop(1, "rgba(0,0,0,0)");
-
-        ctx.strokeStyle = grad;
-        ctx.lineWidth = 2.2;
-        ctx.beginPath();
-        ctx.moveTo(m.x, m.y);
-        ctx.lineTo(tx, ty);
-        ctx.stroke();
-
-        if (m.life > m.maxLife || m.x < -200 || m.y > innerHeight + 200){
-          meteors.splice(i,1);
-        }
-      }
-
-      requestAnimationFrame(draw);
-    }
-
-    resize();
-    requestAnimationFrame(draw);
-
-    // ✅ LOGIN CON SUPABASE
-    document.getElementById("loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value;
-
-      const { error } = await supabase.auth.signInWithPassword({ email, password });
-      if (error) return alert(error.message);
-
-      window.location.href = "dashboard.html";
-    });
-
-    document.getElementById("forgot").addEventListener("click", (e) => {
-      e.preventDefault();
-      alert("Aquí va tu flujo de recuperar contraseña.");
-    });
-  </script>
+/* LOGIN */
+document.getElementById("loginForm").addEventListener("submit",async e=>{
+  e.preventDefault();
+  const email=email.value.trim();
+  const password=password.value;
+  const {error}=await supabase.auth.signInWithPassword({email,password});
+  if(error) return alert(error.message);
+  location.href="dashboard.html";
+});
+</script>
 </body>
 </html>
